.provarCaches/00D410000011HE0EAM/objects/rstk__pjiacwp__c.object
<CustomObject>
    <description>pjiacwp__c</description>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__pjiacwp_pjprojwbscst__r.Name + &apos; - &apos;+TEXT(rstk__pjiacwp_txndate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjiacwp_desc__c</fullName>
        <description>pjiacwp_desc__c</description>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjiacwp_dim1__c</fullName>
        <description>pjiacwp_dim1__c</description>
        <label>Dimension Value 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjiacwp_dim2__c</fullName>
        <description>pjiacwp_dim2__c</description>
        <label>Dimension Value 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjiacwp_dim3__c</fullName>
        <description>pjiacwp_dim3__c</description>
        <label>Dimension Value 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjiacwp_iodc__c</fullName>
        <defaultValue>0</defaultValue>
        <description>pjiacwp_iodc__c</description>
        <label>Indirect ODC Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjiacwp_lodc__c</fullName>
        <defaultValue>0</defaultValue>
        <description>pjiacwp_lodc__c</description>
        <label>Travel ODC Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjiacwp_modc__c</fullName>
        <defaultValue>0</defaultValue>
        <description>pjiacwp_modc__c</description>
        <label>Misc ODC Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjiacwp_pjprojcst__c</fullName>
        <description>pjiacwp_pjprojcst__c</description>
        <label>Project Budget / Costs</label>
        <referenceTo>rstk__pjprojcst__c</referenceTo>
        <relationshipLabel>Project Indirect Cost Transactions</relationshipLabel>
        <relationshipName>pjiacwps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__pjiacwp_pjprojwbscst__c</fullName>
        <description>pjiacwp_pjprojwbscst__c</description>
        <label>Project Charge Code Budget / Costs</label>
        <referenceTo>rstk__pjprojwbscst__c</referenceTo>
        <relationshipLabel>Project Indirect Cost Transactions</relationshipLabel>
        <relationshipName>pjiacwps</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__pjiacwp_povend__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>pjiacwp_povend__c</description>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Project Indirect Cost Transactions</relationshipLabel>
        <relationshipName>pjiacwps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pjiacwp_sodc__c</fullName>
        <defaultValue>0</defaultValue>
        <description>pjiacwp_sodc__c</description>
        <label>Service ODC Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pjiacwp_syodc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>pjiacwp_syodc__c</description>
        <label>ODC Code</label>
        <referenceTo>rstk__syodc__c</referenceTo>
        <relationshipLabel>Project Indirect Cost Transactions</relationshipLabel>
        <relationshipName>pjiacwps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pjiacwp_txndate__c</fullName>
        <description>pjiacwp_txndate__c</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pjiacwp_txnrefnum__c</fullName>
        <description>pjiacwp_txnrefnum__c</description>
        <label>Transaction Reference Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pjiacwp_vendor__c</fullName>
        <description>pjiacwp_vendor__c</description>
        <label>Vendor  Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <description>triggeroptions__c</description>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__pjiacwp_glbankcardtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bank Card Transaction</description>
        <inlineHelpText>Where this transaction was created via a Bank Card transaction, this field is populated with a lookup to the associated Bank Card Transaction.</inlineHelpText>
        <label>Bank Card Transaction</label>
        <referenceTo>rstkf__glbankcardtxn__c</referenceTo>
        <relationshipLabel>Project Indirect Cost Transactions</relationshipLabel>
        <relationshipName>Project_Indirect_Cost_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Indirect Cost Transactions</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstk__pjiacwp_pjprojcst__c</columns>
        <columns>rstk__pjiacwp_pjprojwbscst__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>rstkf__pjiacwp_glbankcardtxn__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Indirect Cost Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Validate_Charge_Code_Project</fullName>
        <active>true</active>
        <description>Charge/Job Code must belong to the specified Project</description>
        <errorConditionFormula>rstk__pjiacwp_pjprojwbscst__c != null &amp;&amp; rstk__pjiacwp_pjprojcst__c != null &amp;&amp; rstk__pjiacwp_pjprojwbscst__r.rstk__pjprojwbscst_pjprojcst__c !=  rstk__pjiacwp_pjprojcst__c</errorConditionFormula>
        <errorMessage>Charge/Job Code must belong to the specified Project</errorMessage>
    </validationRules>
</CustomObject>